--- a/index.html
+++ b/index.html
@@ -5,11 +5,635 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Programación Web - Ingeniería en TI</title>
-    <link rel="stylesheet" href="estilos/estilos.css">
+    <style>
+        body {
+            margin: 0;
+            font-family: 'Poppins', sans-serif;
+            background: #f0f4f8;
+            color: #333;
+            scroll-behavior: smooth;
+        }
+
+        p,
+        li {
+            font-size: 17px;
+            line-height: 1.7em;
+        }
+
+        /* HEADER */
+        header {
+            color: #fff;
+            text-align: center;
+            padding: 60px 20px 0.9px;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+            background: linear-gradient(180deg, #000f42, #003366);
+        }
+
+        header h1 {
+            margin: 0;
+            font-size: 2em;
+        }
+
+        header h2 {
+            font-weight: 600%;
+            margin-top: 10px;
+        }
+
+        /* LOGO HEADER */
+        .logo-header {
+            position: absolute;
+            top: 60px;
+            left: 20px;
+        }
+
+        /* NAV Y DROPDOWN */
+        nav {
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            background-color: #000f42;
+            border-bottom: #29abe2 1px solid;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+            z-index: 100;
+            margin: 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 15px;
+            transition: background 0.3s;
+        }
+
+        nav a:hover {
+            background-color: #67bbff;
+            color: #000;
+        }
+
+        /* dropdown */
+        .dropdown {
+            position: relative;
+        }
+
+        .dropdown>a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px 15px;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            top: 100%;
+            left: 0;
+            background-color: #000f42;
+            border-radius: 0 0 8px 8px;
+            min-width: 180px;
+            z-index: 999;
+            margin-top: 0;
+            padding: 5px 0;
+        }
+
+        .dropdown-content li {
+            list-style: none;
+        }
+
+        .dropdown-content li a {
+            display: block;
+            color: #fff;
+            padding: 10px 15px;
+            text-decoration: none;
+            transition: background 0.3s;
+        }
+
+        .dropdown-content li a:hover {
+            background-color: #67bbff;
+            color: #000;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        /* CONTENIDO CON ASIDE */
+        .contenido-principal {
+            display: flex;
+            flex-direction: row;
+            align-items: flex-start;
+            gap: 25px;
+            padding: 20px 40px;
+        }
+
+        .contenido {
+            flex: 3;
+            min-width: 0;
+        }
+
+        /* ASIDE */
+        .aside-noticias {
+            flex: 1;
+            background: linear-gradient(135deg, #003366, #2b76c2);
+            color: #fff;
+            padding: 25px 20px;
+            border-radius: 10px;
+            border-right: 5px solid #00a0e0;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+            max-width: 320px;
+            position: sticky;
+            height: fit-content;
+        }
+
+        /* títulos aside  */
+        .aside-noticias h2 {
+            text-align: left;
+            color: #ffffff;
+            border-bottom: 2px solid #00a0e0;
+            padding-bottom: 8px;
+            margin-bottom: 20px;
+        }
+
+        .aside-noticias .noticia {
+            background-color: #ffffff1a;
+            border-left: 4px solid #e0e6f2;
+            border-radius: 8px;
+            padding: 12px 15px;
+            margin-bottom: 15px;
+            transition: background 0.3s;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        .aside-noticias .noticia:hover {
+            background-color: #ffffff33;
+            transform: scale(1.03);
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        .aside-noticias h3 {
+            margin-top: 0;
+            color: #cce6ff;
+            font-size: 1em;
+        }
+
+        .aside-noticias p {
+            font-size: 15px;
+            color: #e0e6f2;
+            margin: 8px 0;
+            line-height: 1.5;
+        }
+
+        .aside-noticias a {
+            color: #29abe2;
+            font-weight: 600;
+            text-decoration: none;
+            font-size: 14px;
+        }
+
+        .aside-noticias a:hover {
+            text-decoration: underline;
+        }
+
+        .logo-siiaa img {
+            border-radius: 0px;
+            width: 100%;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        /* SECCIONES */
+        section {
+            min-height: auto;
+            padding: 25px 40px 40px;
+        }
+
+        section:nth-of-type(odd) {
+            background-color: #e5e7ff;
+        }
+
+        section:nth-of-type(even) {
+            background-color: #ccd1ff;
+        }
+
+        h2 {
+            border-bottom: 3px solid #033464;
+            padding-bottom: 10px;
+            letter-spacing: 0.5px;
+        }
+
+        /* ARTICLES, FIGURAS Y DETAILS */
+        article {
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 15px;
+            border-radius: 10px;
+            margin: 15px 0;
+        }
+
+        figure {
+            text-align: center;
+            margin: 20px 0;
+        }
+
+        figure img {
+            width: 80%;
+            border-radius: 10px;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        figcaption {
+            font-size: 0.9em;
+            color: #555;
+        }
+
+        /* DETAILS */
+        details {
+            background: #fff;
+            border-radius: 8px;
+            margin: 10px 0;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        summary {
+            font-weight: 600;
+            cursor: pointer;
+            color: #003366;
+            padding: 0 5px;
+        }
+
+        /* UNIDADES */
+        #unidades {
+            padding: 25px 40px 40px;
+        }
+
+        #unidades article {
+            margin: 20px 0;
+            background-color: rgba(255, 255, 255, 0.8);
+            padding: 15px;
+            border-radius: 10px;
+            border-left: 6px solid #003366;
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+        }
+
+        #unidades article:hover {
+            transform: scale(1.03);
+            /* aumenta el tamaño un 3% al pasar el cursor */
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+        }
+
+        #unidades details {
+            background: #fff;
+            padding: 10px 15px;
+            border-radius: 8px;
+            margin: 10px 0;
+            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+        }
+
+        #unidades summary {
+            font-weight: 600;
+            color: #003366;
+            cursor: pointer;
+        }
+
+        /* VIDEO Y FONDO */
+        .video-container {
+            position: relative;
+            width: 100%;
+            max-width: 800px;
+            margin: 40px auto;
+            padding: 15px;
+            background: linear-gradient(135deg, #003366, #0059b3);
+            border-radius: 12px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
+        }
+
+        .video-container iframe {
+            width: 100%;
+            height: 450px;
+            border: none;
+            border-radius: 8px;
+            align-items: center;
+        }
+
+        .video-caption {
+            font-size: 0.95em;
+            color: #e0e6f2;
+            margin-top: 12px;
+            text-align: center;
+            font-style: italic;
+        }
+
+        /* TABLA DE HORAS */
+        .horas-container {
+            background: #ffffffcc;
+            border-radius: 10px;
+            padding: 20px;
+            margin: 20px 0;
+            box-shadow: 0 3px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .horas-container h3 {
+            text-align: center;
+            color: #003366;
+            margin-bottom: 10px;
+        }
+
+        .tabla-horas {
+            width: 100%;
+            border-collapse: collapse;
+            margin: 0 auto;
+            text-align: center;
+            font-size: 16px;
+        }
+
+        .tabla-horas th {
+            background-color: #003366;
+            color: #fff;
+            padding: 10px;
+            font-size: 15px;
+        }
+
+        .tabla-horas td {
+            background-color: #e5e7ff;
+            padding: 10px;
+            border-bottom: 1px solid #ccc;
+        }
+
+        .tabla-horas tr:last-child td {
+            border-bottom: none;
+        }
+
+        .tabla-horas tr:hover td {
+            background-color: #ccd1ff;
+        }
+
+        .tabla-horas td:first-child {
+            text-align: left;
+        }
+
+        .fila-total td {
+            background-color: #003366;
+            color: #fff;
+            font-weight: bold;
+        }
+
+
+        /* FOOTER */
+        .footer-ups {
+            font-family: 'Poppins', sans-serif;
+            color: #fff;
+        }
+
+        /* contacto */
+        .footer-contacto-academico {
+            background-color: #0a1a2f;
+            text-align: center;
+            padding: 1px 10px 15px;
+            border-top: 2px solid #00a0e0;
+            border-bottom: 1px solid #1b3a63;
+        }
+
+        .footer-contacto-academico h3 {
+            color: #ffffff;
+            font-size: 17px;
+            margin-bottom: 10px;
+            letter-spacing: 1px;
+        }
+
+        .footer-contacto-academico p {
+            color: #cce6ff;
+            font-size: 15px;
+            margin: 5px 0;
+        }
+
+        .footer-contacto-academico span {
+            color: #00a0e0;
+            text-decoration: none;
+        }
+
+        .footer-contacto-academico span:hover {
+            text-decoration: underline;
+        }
+
+        /* inferior footer */
+        .footer-bottom {
+            border-top: 1px solid #1b3a63;
+            background-color: #081422;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-wrap: wrap;
+            padding: 15px 50px;
+
+        }
+
+        .footer-logo {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .footer-logo p {
+            font-size: 0.8em;
+            padding-top: 30px;
+        }
+
+        .footer-contacto {
+            text-align: right;
+            max-width: 500px;
+        }
+
+        .footer-contacto p {
+            margin: 5px 0;
+            color: #ccc;
+            font-size: 0.8em;
+        }
+
+        /* LAPTOPS */
+        @media (max-width: 1024px) {
+
+            header h1 {
+                font-size: 1.8em;
+                transition: font-size 0.3s ease;
+            }
+
+            .contenido-principal {
+                padding: 15px 25px;
+                gap: 20px;
+                transition: all 0.3s ease;
+            }
+
+            .aside-noticias {
+                max-width: 280px;
+                transition: all 0.3s ease;
+            }
+
+            .video-container iframe {
+                height: 400px;
+                transition: height 0.3s ease;
+                align-items: center;
+            }
+        }
+
+        /* TABLETS */
+        @media (max-width: 768px) {
+
+            .logo-header {
+                position: relative;
+                top: 0;
+                left: 0;
+                display: flex;
+                justify-content: center;
+                margin-bottom: 15px;
+                padding-top: 140px;
+                transition: all 0.3s ease;
+            }
+
+            header {
+                padding-top: 120px;
+                transition: all 0.3s ease;
+            }
+
+            nav {
+                flex-direction: column;
+                align-items: center;
+                padding: 10px;
+                gap: 10px;
+                transition: all 0.3s ease;
+            }
+
+            nav a {
+                padding: 10px;
+                display: block;
+            }
+
+            .contenido-principal {
+                flex-direction: column;
+                align-items: center;
+                transition: all 0.3s ease;
+            }
+
+            .aside-noticias {
+                max-width: 90%;
+                margin-top: 20px;
+                border-right: none;
+                border-top: 5px solid #00a0e0;
+                transition: all 0.3s ease;
+            }
+
+            figure img {
+                width: 90%;
+                transition: width 0.3s ease;
+                align-items: center;
+            }
+
+            .video-container iframe {
+                height: 350px;
+                transition: height 0.3s ease;
+                align-items: center;
+
+            }
+
+            .footer-bottom {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+                padding: 20px;
+                transition: all 0.3s ease;
+            }
+
+            .footer-logo {
+                justify-content: center;
+                margin-bottom: 10px;
+            }
+
+            .footer-contacto {
+                text-align: center;
+            }
+        }
+
+        /* TELEFONOS */
+        @media (max-width: 480px) {
+            .logo-header {
+                position: relative;
+                top: 0;
+                left: 0;
+                display: flex;
+                justify-content: center;
+                margin-bottom: 15px;
+                padding-top: 160px;
+                transition: all 0.3s ease;
+            }
+
+            header h1 {
+                font-size: 1.4em;
+            }
+
+            header h2 {
+                font-size: 1em;
+            }
+
+            nav {
+                gap: 5px;
+            }
+
+            nav a {
+                padding: 8px;
+                font-size: 0.9em;
+            }
+
+            .contenido-principal {
+                padding: 10px;
+            }
+
+            .aside-noticias {
+                padding: 15px;
+                font-size: 0.9em;
+                border-top: 5px solid #00a0e0;
+            }
+
+            .video-container {
+                padding: 10px;
+                align-items: center;
+                padding-right: 10px;
+            }
+
+            .video-container iframe {
+                height: 100px;
+            }
+
+            .tabla-horas th,
+            .tabla-horas td {
+                font-size: 13px;
+                padding: 6px;
+            }
+
+            .footer-bottom {
+                padding: 15px 20px;
+            }
+
+            .footer-logo p,
+            .footer-contacto p {
+                font-size: 0.75em;
+            }
+
+            .footer-logo img {
+                width: 60px;
+                height: auto;
+                transition: width 0.3s ease;
+            }
+        }
+    </style>
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
+
 
 <body>
     <header>
@@ -17,9 +641,9 @@
 usé la etiqueta <header> para colocar y que resaltara el nombre de la carrera y la materia, esta 
 etiqueta es la más adecuada para poner títulos y encabezados importantes en una página web
 -->
- <div class="logo-header">
-        <img src="imagenes/upsinlogo.png" alt="Logo UPSIN blanco">
-    </div>
+        <div class="logo-header">
+            <img src="imagenes/upsinlogo.png" alt="Logo UPSIN blanco">
+        </div>
         <h1>Ingeniería en Tecnologías de la Información</h1>
         <h2>Programación Web 💻</h2>
 
@@ -41,7 +665,7 @@ ahí van los enlaces que llevan a las diferentes secciones de la página
             </div>
             <a href="#referencias">Referencias</a>
         </nav>
-        
+
     </header>
 
     <main class="contenido-principal">
@@ -305,7 +929,8 @@ y para poder acomodar esta sección a un lado más fácil
 
             <article class="noticia">
                 <h3>Equipo de 7-1</h3>
-                <p>Conoce a los talentosos integrantes del equipo de TI7-1, siempre listos para enfrentar nuevos desafíos.</p>
+                <p>Conoce a los talentosos integrantes del equipo de TI7-1, siempre listos para enfrentar nuevos
+                    desafíos.</p>
                 <figure class="logo-siiaa">
                     <img src="imagenes/compañeros.png" alt="El equipo de TI7-1 de siempre">
                 </figure>
